load("//:tooling/bundle_js.bzl", "bundle_js")

bundle_js(
    name = "bundled",
    outs = ["renderer.js"],
    config = "$(execpath //renderer/page/main:webpack.config.js)",
    data = [
        "//:package_info",
        "//renderer/page/main",
        "//renderer/page/main:webpack.config.js",
        "@npm//css-loader",
        "@npm//style-loader",
        "@npm//url-loader",
    ],
    entries = ["./$(GENDIR)/renderer/page/main/index.js"],
    target = "web",
    visibility = ["//visibility:public"],
)
