load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//:tooling/ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "utilities",
    package_name = "@testing/utilities",
    deps = [":compile_ts"],
)

ts_project(
    name = "compile_ts",
    srcs = glob(["**/*.ts"]),
    deps = ["//common/main"],
)
