load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//:tooling/ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "main",
    package_name = "@electron-app",
    deps = [":compile_ts"],
)

ts_project(
    name = "compile_ts",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//common/main",
        "@npm//@types/adm-zip",
        "@npm//@types/node",
        "@npm//@wessberg/di",
        "@npm//adm-zip",
        "@npm//electron",
        "@npm//electron-debug",
        "@npm//electron-log",
        "@npm//electron-store",
        "@npm//electron-updater",
        "@npm//istextorbinary",
        "@npm//luxon",
        "@npm//use-debounce",
    ],
)
