load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//:tooling/ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

js_library(
    name = "main",
    package_name = "@web-app",
    deps = [":compile_ts"],
)

ts_project(
    name = "compile_ts",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//common/main",
        "//renderer/page/main",
        "@npm//@types/luxon",
        "@npm//@types/sprintf-js",
        "@npm//@wessberg/di",
        "@npm//browser-nativefs",
        "@npm//luxon",
        "@npm//rxjs",
        "@npm//sprintf-js",
    ],
)
