load("@npm//mocha:index.bzl", "mocha_test")
load("//:tooling/ts_project.bzl", "ts_node_project")

ts_node_project(
    name = "compile_ts",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//apps/web/main",
        "//common/main",
        "//testing/ui-utilities",
        "@npm//@types/chai-as-promised",
        "@npm//@types/chai-subset",
        "@npm//@types/mocha",
        "@npm//chai",
        "@npm//chai-subset",
        "@npm//sinon-chai",
        "@npm//ts-sinon",
        "@npm//webdriverio",
    ],
)

mocha_test(
    name = "test",
    args = [package_name() + "/platform/*.spec.js"],
    configuration_env_vars = ["PATH"],
    data = [
        ":compile_ts",
        "//:.mocharc.json",
        "//:package.json",
        "//apps/web:bundle_web",
        "//apps/web:index_html",
        "//testing/ui-utilities",
        "@npm//chai-as-promised",
        "@npm//jsdom",
    ],
)
