load("@npm//mocha:index.bzl", "mocha_test")
load("//:tooling/ts_project.bzl", "ts_node_project")

ts_node_project(
    name = "compile_ts",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//renderer/codemirror/main",
        "@npm//@codemirror/state",
        "@npm//@codemirror/text",
        "@npm//@types/chai",
        "@npm//@types/mocha",
        "@npm//chai",
    ],
)

mocha_test(
    name = "test",
    args = [package_name() + "/**/*.spec.js"],
    data = [
        ":compile_ts",
        "//common/main",
    ],
)
