load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//:tooling/ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:private"])

exports_files([
    "index.html",
    "webpack.config.js",
])

filegroup(
    name = "images",
    srcs = glob(["images/*"]),
)

js_library(
    name = "main",
    package_name = "@renderer",
    srcs = [":images"],
    visibility = ["//visibility:public"],
    deps = [":compile_ts"],
)

ts_project(
    name = "compile_ts",
    srcs = glob([
        "**/*.ts",
        "**/*.tsx",
    ]),
    visibility = ["//visibility:private"],
    deps = [
        "//common/main",
        "//renderer/codemirror/main",
        "@npm//@material-ui/core",
        "@npm//@material-ui/icons",
        "@npm//@material-ui/lab",
        "@npm//@types/node",
        "@npm//@types/react-beforeunload",
        "@npm//@types/react-dom",
        "@npm//@types/react-router-dom",
        "@npm//@types/webpack-env",
        "@npm//clsx",
        "@npm//istextorbinary",
        "@npm//luxon",
        "@npm//mdi-material-ui",
        "@npm//notistack",
        "@npm//react",
        "@npm//react-beforeunload",
        "@npm//react-dom",
        "@npm//react-error-boundary",
        "@npm//react-router-dom",
        "@npm//react-virtuoso",
        "@npm//rxjs",
        "@npm//source-map-support",
        "@npm//sprintf-js",
        "@npm//syllable",
        "@npm//typeface-roboto",
        "@npm//typeface-roboto-mono",
        "@npm//use-debounce",
    ],
)
