load("//:tooling/ts_project.bzl", "ts_node_project")
load("//:tooling/jest.bzl", "jest_test")

ts_node_project(
    name = "compile_ts",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//apps/web/main",
        "//common/main",
        "@npm//@types/chai-as-promised",
        "@npm//@types/chai-subset",
        "@npm//@types/jest",
        "@npm//chai",
        "@npm//chai-as-promised",
        "@npm//chai-subset",
        "@npm//sinon-chai",
        "@npm//ts-sinon",
        "@npm//jest"
    ],
)

jest_test(
    name = "test",
    srcs = [":compile_ts"],
    deps = [],
)
